added second paragraph

--- a/index.html
+++ b/index.html
@@ -63,5 +63,7 @@
     <a href="https://google.com">google</a>
     <p>to jest mój nowy pomysł</p>
 
+    <p>Teraz po zmianach wprowadzonych przez innego użytkowika spróbuję wypushować moją wersję na main-a</p>
+
 </body>
 </html>
