modified file test.html

--- a/test.html
+++ b/test.html
@@ -1,2 +1,2 @@
 <p>to jest test, plik stworzony z poziomu innego użytkowika niż WojciechNwD !!!</p>
-<p>lorem ipsum</p>
+<p>lorem ipsum DOLORES muciacios</p>
