changed in files

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     'git remote -v' - sprawdzamy jakie mamy repozytoria podłączone
 
     
-    'git push -u origin nazwa-branch-u'  - wypushuj swoje zmiany na repo zdalne 
+    'git push -u origin nazwa-branch-u'  - wypushuj zmiany swoje na zdalne repozytorium 
     'git pull' - zaciągnij do siebie zmiany z repo zdalengo
  -->
 
